[gd_scene load_steps=6 format=3 uid="uid://cvndkyjjg8hxm"]

[ext_resource type="Script" path="res://screens/builder/builder_screen.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dig4g4x5jr3rf" path="res://screens/builder/background.png" id="2"]
[ext_resource type="PackedScene" path="res://containers/card_list/card_list.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://dhold8ocsbk5t" path="res://widgets/small_button/small_button.tscn" id="5"]
[ext_resource type="Script" path="res://addons/cardengine/core/drop_area.gd" id="7"]

[node name="BuilderScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 1

[node name="TitleBg" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 60)
layout_mode = 0
anchor_right = 1.0
offset_bottom = 85.0
color = Color(0, 0, 0, 0.784314)

[node name="TitleLayout" type="HBoxContainer" parent="TitleBg"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0

[node name="Title" type="Label" parent="TitleBg/TitleLayout"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 26
text = "Deck
Builder"

[node name="Separator" type="Control" parent="TitleBg/TitleLayout"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="CategoriesLayout" type="VBoxContainer" parent="TitleBg/TitleLayout"]
layout_mode = 2
alignment = 1

[node name="ClassLayout" type="HBoxContainer" parent="TitleBg/TitleLayout/CategoriesLayout"]
layout_mode = 2

[node name="ClassLbl" type="Label" parent="TitleBg/TitleLayout/CategoriesLayout/ClassLayout"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Filter by class"

[node name="Class" type="OptionButton" parent="TitleBg/TitleLayout/CategoriesLayout/ClassLayout"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="RarityLayout" type="HBoxContainer" parent="TitleBg/TitleLayout/CategoriesLayout"]
layout_mode = 2

[node name="RarityLbl" type="Label" parent="TitleBg/TitleLayout/CategoriesLayout/RarityLayout"]
custom_minimum_size = Vector2(120, 24)
layout_mode = 2
text = "Filter by rarity"

[node name="Rarity" type="OptionButton" parent="TitleBg/TitleLayout/CategoriesLayout/RarityLayout"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="ValuesLayout" type="VBoxContainer" parent="TitleBg/TitleLayout"]
layout_mode = 2
alignment = 1

[node name="Values" type="OptionButton" parent="TitleBg/TitleLayout/ValuesLayout"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
clip_text = true

[node name="ComparisionLayout" type="HBoxContainer" parent="TitleBg/TitleLayout/ValuesLayout"]
layout_mode = 2

[node name="ComparisonOperator" type="OptionButton" parent="TitleBg/TitleLayout/ValuesLayout/ComparisionLayout"]
layout_mode = 2
size_flags_horizontal = 3
clip_text = true

[node name="ComparisonValue" type="SpinBox" parent="TitleBg/TitleLayout/ValuesLayout/ComparisionLayout"]
layout_mode = 2
min_value = -1000.0
max_value = 1000.0
allow_greater = true
allow_lesser = true

[node name="TextsLayout" type="VBoxContainer" parent="TitleBg/TitleLayout"]
layout_mode = 2
alignment = 1

[node name="Texts" type="OptionButton" parent="TitleBg/TitleLayout/TextsLayout"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
clip_text = true

[node name="Contains" type="LineEdit" parent="TitleBg/TitleLayout/TextsLayout"]
layout_mode = 2

[node name="SortLayout" type="GridContainer" parent="TitleBg/TitleLayout"]
layout_mode = 2
columns = 2

[node name="RaritySort" type="CheckBox" parent="TitleBg/TitleLayout/SortLayout"]
layout_mode = 2
text = "Sort by rarity"

[node name="ManaSort" type="CheckBox" parent="TitleBg/TitleLayout/SortLayout"]
layout_mode = 2
text = "Sort by mana"

[node name="NameSort" type="CheckBox" parent="TitleBg/TitleLayout/SortLayout"]
layout_mode = 2
text = "Sort by name"

[node name="Spacer" type="Control" parent="TitleBg/TitleLayout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackBtn" parent="TitleBg/TitleLayout" instance=ExtResource("5")]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Back to menu"

[node name="BuilderLayout" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 90.0

[node name="LibraryBg" type="ColorRect" parent="BuilderLayout"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
color = Color(0, 0, 0, 0.784314)

[node name="LibraryScroll" type="ScrollContainer" parent="BuilderLayout/LibraryBg"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LibraryContainer" parent="BuilderLayout/LibraryBg/LibraryScroll" instance=ExtResource("4")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
in_anchor = NodePath("../../InAnchor")
out_anchor = NodePath("../../OutAnchor")

[node name="InAnchor" type="Control" parent="BuilderLayout/LibraryBg"]
anchors_preset = 0
anchor_top = 0.5
anchor_bottom = 0.5
rotation = 90.0
scale = Vector2(1e-05, 1e-05)

[node name="OutAnchor" type="Control" parent="BuilderLayout/LibraryBg"]
anchors_preset = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
rotation = 90.0
scale = Vector2(1e-05, 1e-05)

[node name="DeckBg" type="ColorRect" parent="BuilderLayout"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
color = Color(0, 0, 0, 0.784314)

[node name="CardDrop" type="Control" parent="BuilderLayout/DeckBg"]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource("7")

[node name="DeckLayout" type="VBoxContainer" parent="BuilderLayout/DeckBg/CardDrop"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0

[node name="DeckSelect" type="OptionButton" parent="BuilderLayout/DeckBg/CardDrop/DeckLayout"]
layout_mode = 2

[node name="UseBtn" type="Button" parent="BuilderLayout/DeckBg/CardDrop/DeckLayout"]
layout_mode = 2
disabled = true
text = "Play this deck (10)"

[node name="DeckSaveLayout" type="HBoxContainer" parent="BuilderLayout/DeckBg/CardDrop/DeckLayout"]
layout_mode = 2

[node name="DeckName" type="LineEdit" parent="BuilderLayout/DeckBg/CardDrop/DeckLayout/DeckSaveLayout"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Deck name"

[node name="SaveBtn" type="Button" parent="BuilderLayout/DeckBg/CardDrop/DeckLayout/DeckSaveLayout"]
layout_mode = 2
disabled = true
text = "Save"

[node name="DeckScroll" type="ScrollContainer" parent="BuilderLayout/DeckBg/CardDrop/DeckLayout"]
layout_mode = 2
size_flags_vertical = 3

[node name="DeckList" type="VBoxContainer" parent="BuilderLayout/DeckBg/CardDrop/DeckLayout/DeckScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="item_selected" from="TitleBg/TitleLayout/CategoriesLayout/ClassLayout/Class" to="." method="_on_Class_item_selected"]
[connection signal="item_selected" from="TitleBg/TitleLayout/CategoriesLayout/RarityLayout/Rarity" to="." method="_on_Rarity_item_selected"]
[connection signal="item_selected" from="TitleBg/TitleLayout/ValuesLayout/Values" to="." method="_on_Values_item_selected"]
[connection signal="item_selected" from="TitleBg/TitleLayout/ValuesLayout/ComparisionLayout/ComparisonOperator" to="." method="_on_ComparisonOperator_item_selected"]
[connection signal="value_changed" from="TitleBg/TitleLayout/ValuesLayout/ComparisionLayout/ComparisonValue" to="." method="_on_ComparisonValue_value_changed"]
[connection signal="item_selected" from="TitleBg/TitleLayout/TextsLayout/Texts" to="." method="_on_Texts_item_selected"]
[connection signal="text_changed" from="TitleBg/TitleLayout/TextsLayout/Contains" to="." method="_on_Contains_text_changed"]
[connection signal="toggled" from="TitleBg/TitleLayout/SortLayout/RaritySort" to="." method="_on_RaritySort_toggled"]
[connection signal="toggled" from="TitleBg/TitleLayout/SortLayout/ManaSort" to="." method="_on_ManaSort_toggled"]
[connection signal="toggled" from="TitleBg/TitleLayout/SortLayout/NameSort" to="." method="_on_NameSort_toggled"]
[connection signal="pressed" from="TitleBg/TitleLayout/BackBtn" to="." method="_on_BackBtn_pressed"]
[connection signal="resized" from="BuilderLayout/LibraryBg/LibraryScroll" to="." method="_on_LibraryScroll_resized"]
[connection signal="dropped" from="BuilderLayout/DeckBg/CardDrop" to="." method="_on_CardDrop_dropped"]
[connection signal="item_selected" from="BuilderLayout/DeckBg/CardDrop/DeckLayout/DeckSelect" to="." method="_on_DeckSelect_item_selected"]
[connection signal="pressed" from="BuilderLayout/DeckBg/CardDrop/DeckLayout/UseBtn" to="." method="_on_UseBtn_pressed"]
[connection signal="text_changed" from="BuilderLayout/DeckBg/CardDrop/DeckLayout/DeckSaveLayout/DeckName" to="." method="_on_DeckName_text_changed"]
[connection signal="pressed" from="BuilderLayout/DeckBg/CardDrop/DeckLayout/DeckSaveLayout/SaveBtn" to="." method="_on_SaveBtn_pressed"]
